{
    "name": "FrameworkInputs",
    "maps": [
        {
            "name": "Player",
            "id": "1992fcd3-e1ff-4f39-b811-a657c63bbf58",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Button",
                    "id": "dd07e4e5-3437-46a4-9c6b-2766df965b45",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Rotation",
                    "type": "Button",
                    "id": "ae3dad20-4fc5-4af5-b4c3-3de4cefe6776",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "c532b3db-0558-4476-8d3c-0e20d531fc68",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "8db6f50b-3063-4760-a93a-1d788575ccba",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "8141b8e7-070e-4f60-995c-f745a57b1806",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "cbdb9f6b-84fc-4597-9490-b8f8c8dce514",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotation",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "ae2002cc-ef60-444c-93fb-4b557c925528",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "f9fe3438-d451-471d-8161-ef6b28da2d8e",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Drone",
            "id": "7c1a34c7-23a7-42e9-8d29-434e91beea59",
            "actions": [
                {
                    "name": "MoveForwardBack",
                    "type": "Button",
                    "id": "339c84c2-5350-446d-9829-00b2e4d41cd9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Rotate",
                    "type": "Button",
                    "id": "7a53cab5-ddac-4bf6-85f4-429177eca8a6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Elevation",
                    "type": "Button",
                    "id": "96a93f56-8695-4095-af19-b0fd10f17628",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "4b50999d-ce3e-4ded-970b-d14381fe1c93",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveForwardBack",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "4ac482f0-fca9-4070-aefe-cc90d477eba4",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveForwardBack",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "e41913e3-f669-44b9-baa4-1bc8a47f9672",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveForwardBack",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "a3c1b991-2ce1-4f29-859b-1c9d1e7bf19c",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Elevation",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "e9161034-1c9a-4c8d-975e-7dbfdd56ee5f",
                    "path": "<Keyboard>/v",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Elevation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "5b6b265b-1481-45cb-881e-03e34886511a",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Elevation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "81e02779-3020-4072-af2a-d514e3a88512",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "b10cd24a-964e-4774-abdc-27120ee848df",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "6e768531-726b-4dc2-9bd9-d8ae39d9dddf",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Forklift",
            "id": "14238e2e-3de1-439e-82e4-9e87b896691e",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "2663b95a-dc70-45c5-b09f-1bfdd77051b0",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ForksRaiseLower",
                    "type": "Button",
                    "id": "60be4ef6-f825-4d5d-b9b6-acf31831cf81",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "cc009c5b-a91d-494e-a6fd-7e77678402f5",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "ae37c178-157d-4eda-adc3-e9de844adcbe",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "3f271054-adaf-4600-bf2c-4eb4f038a6ff",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "9c0b4f7e-dbaf-4b0f-a206-fc8ed6289328",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "546c2b82-7f84-41cc-a19a-0f273ff0ddf9",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "e7dd393a-663c-4847-8319-6a8279c9abcf",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ForksRaiseLower",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "c46b7f70-ddd3-47f6-b8df-1af0453e9b11",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ForksRaiseLower",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "3ef3e60f-2ab3-48de-8619-68528d2fa3e3",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ForksRaiseLower",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Melee",
            "id": "c0a635d2-75d3-40b7-98d4-579b7ed5ae6f",
            "actions": [
                {
                    "name": "Punch",
                    "type": "Button",
                    "id": "ac77483f-838f-4a48-8dd1-287b790c546e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1fe56727-9f30-4fb7-95d0-1ce1ab7d4276",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Punch",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Hacking",
            "id": "8f7c04a7-81da-43d7-a4d0-eb7d5415793e",
            "actions": [
                {
                    "name": "PressAndHold",
                    "type": "Button",
                    "id": "031e7f2f-d4c7-4ebd-ae4c-11f83444e2d9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "36b7ab03-0605-4a60-a221-3fd3b6eca3cd",
                    "path": "<Keyboard>/e",
                    "interactions": "Hold(duration=1)",
                    "processors": "",
                    "groups": "",
                    "action": "PressAndHold",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}